src/libshoopdaloop/libshoopdaloop.h

SHOOP_EXPORT void                   disconnect_midi_output   (shoopdaloop_loop_midi_channel_t  *channel, shoopdaloop_midi_port_t* port);
SHOOP_EXPORT void                   disconnect_audio_inputs (shoopdaloop_loop_audio_channel_t *channel);
SHOOP_EXPORT void                   disconnect_midi_inputs  (shoopdaloop_loop_midi_channel_t  *channel);
SHOOP_EXPORT void                   disconnect_audio_input  (shoopdaloop_loop_audio_channel_t *channel, shoopdaloop_audio_port_t* port);
SHOOP_EXPORT void                   disconnect_midi_input   (shoopdaloop_loop_midi_channel_t  *channel, shoopdaloop_midi_port_t* port);
SHOOP_EXPORT shoop_audio_channel_data_t  *get_audio_channel_data   (shoopdaloop_loop_audio_channel_t *channel);
SHOOP_EXPORT shoop_midi_sequence_t   *get_midi_channel_data    (shoopdaloop_loop_midi_channel_t  *channel);
SHOOP_EXPORT void                   load_audio_channel_data  (shoopdaloop_loop_audio_channel_t *channel, shoop_audio_channel_data_t *data);
SHOOP_EXPORT void                   load_midi_channel_data   (shoopdaloop_loop_midi_channel_t  *channel, shoop_midi_sequence_t  *data);
SHOOP_EXPORT shoop_audio_channel_state_info_t *get_audio_channel_state  (shoopdaloop_loop_audio_channel_t *channel);
SHOOP_EXPORT void                   set_audio_channel_gain (shoopdaloop_loop_audio_channel_t *channel, float gain);
SHOOP_EXPORT shoop_midi_channel_state_info_t  *get_midi_channel_state   (shoopdaloop_loop_midi_channel_t  *channel);
SHOOP_EXPORT void                   set_audio_channel_mode   (shoopdaloop_loop_audio_channel_t * channel, shoop_channel_mode_t mode);
SHOOP_EXPORT void                   set_midi_channel_mode    (shoopdaloop_loop_midi_channel_t * channel, shoop_channel_mode_t mode);
SHOOP_EXPORT void                   set_audio_channel_start_offset (shoopdaloop_loop_audio_channel_t *channel, int offset);
SHOOP_EXPORT void                   set_midi_channel_start_offset  (shoopdaloop_loop_midi_channel_t *channel, int offset);
SHOOP_EXPORT void                   set_audio_channel_n_preplay_samples (shoopdaloop_loop_audio_channel_t *channel, unsigned n);
SHOOP_EXPORT void                   set_midi_channel_n_preplay_samples  (shoopdaloop_loop_midi_channel_t *channel, unsigned n);
SHOOP_EXPORT void                   clear_audio_channel_data_dirty (shoopdaloop_loop_audio_channel_t * channel);
SHOOP_EXPORT void                   clear_midi_channel_data_dirty (shoopdaloop_loop_midi_channel_t * channel);
// FX chains
SHOOP_EXPORT shoopdaloop_fx_chain_t *create_fx_chain(shoop_backend_session_t *backend, shoop_fx_chain_type_t type, const char* title);
SHOOP_EXPORT void fx_chain_set_ui_visible(shoopdaloop_fx_chain_t *chain, unsigned visible);
SHOOP_EXPORT shoop_fx_chain_state_info_t *get_fx_chain_state(shoopdaloop_fx_chain_t *chain);
SHOOP_EXPORT void set_fx_chain_active(shoopdaloop_fx_chain_t *chain, unsigned active);
SHOOP_EXPORT const char *get_fx_chain_internal_state(shoopdaloop_fx_chain_t *chain);
SHOOP_EXPORT void restore_fx_chain_internal_state(shoopdaloop_fx_chain_t *chain, const char* state);
SHOOP_EXPORT unsigned n_fx_chain_audio_input_ports(shoopdaloop_fx_chain_t *chain);
SHOOP_EXPORT unsigned n_fx_chain_audio_output_ports(shoopdaloop_fx_chain_t *chain);
SHOOP_EXPORT unsigned n_fx_chain_midi_input_ports(shoopdaloop_fx_chain_t *chain);
SHOOP_EXPORT shoopdaloop_audio_port_t *fx_chain_audio_input_port(shoopdaloop_fx_chain_t *chain, unsigned int idx);
SHOOP_EXPORT shoopdaloop_audio_port_t *fx_chain_audio_output_port(shoopdaloop_fx_chain_t *chain, unsigned int idx);
SHOOP_EXPORT shoopdaloop_midi_port_t *fx_chain_midi_input_port(shoopdaloop_fx_chain_t *chain, unsigned int idx);
// Audio ports
SHOOP_EXPORT void connect_audio_port_internal(shoopdaloop_audio_port_t *from, shoopdaloop_audio_port_t *to);
SHOOP_EXPORT void connect_audio_port_external(shoopdaloop_audio_port_t *ours, const char* external_port_name);
SHOOP_EXPORT void disconnect_audio_port_external(shoopdaloop_audio_port_t *ours, const char* external_port_name);
SHOOP_EXPORT void disconnect_audio_port_internal(shoopdaloop_audio_port_t *from, shoopdaloop_audio_port_t *to);
SHOOP_EXPORT void set_audio_port_gain(shoopdaloop_audio_port_t *port, float gain);
SHOOP_EXPORT void set_audio_port_muted(shoopdaloop_audio_port_t *port, unsigned muted);
SHOOP_EXPORT void set_audio_port_passthroughMuted(shoopdaloop_audio_port_t *port, unsigned muted);
SHOOP_EXPORT shoop_audio_port_state_info_t *get_audio_port_state(shoopdaloop_audio_port_t *port);
SHOOP_EXPORT shoop_port_connections_state_t *get_audio_port_connections_state(shoopdaloop_audio_port_t *port);
SHOOP_EXPORT void* get_audio_port_driver_handle(shoopdaloop_audio_port_t *port);
SHOOP_EXPORT shoopdaloop_audio_port_t *open_driver_audio_port (
    shoop_backend_session_t *backend,
    shoop_audio_driver_t *driver,
    const char* name_hint,
    shoop_port_direction_t direction,
    unsigned has_always_on_ringbuffer
);
SHOOP_EXPORT shoopdaloop_audio_port_t *open_internal_audio_port (
    shoop_backend_session_t *backend,
    const char* name_hint,
    unsigned has_always_on_ringbuffer
);
SHOOP_EXPORT unsigned get_audio_port_input_connectability(shoopdaloop_audio_port_t* port);
SHOOP_EXPORT unsigned get_audio_port_output_connectability(shoopdaloop_audio_port_t* port);
SHOOP_EXPORT void     set_audio_port_ringbuffer_n_samples (shoopdaloop_audio_port_t* port, unsigned n);
// Midi ports
SHOOP_EXPORT void connect_midi_port_internal(shoopdaloop_midi_port_t *from, shoopdaloop_midi_port_t *to);
SHOOP_EXPORT void connect_midi_port_external(shoopdaloop_midi_port_t *ours, const char* external_port_name);
SHOOP_EXPORT void disconnect_midi_port_external(shoopdaloop_midi_port_t *ours, const char* external_port_name);
SHOOP_EXPORT void disconnect_midi_port_internal(shoopdaloop_midi_port_t *ours, shoopdaloop_midi_port_t *to);
SHOOP_EXPORT shoop_midi_port_state_info_t *get_midi_port_state(shoopdaloop_midi_port_t *port);
SHOOP_EXPORT void set_midi_port_muted(shoopdaloop_midi_port_t *port, unsigned muted);
SHOOP_EXPORT void set_midi_port_passthroughMuted(shoopdaloop_midi_port_t *port, unsigned muted);
SHOOP_EXPORT shoop_port_connections_state_t *get_midi_port_connections_state(shoopdaloop_midi_port_t *port);
SHOOP_EXPORT void* get_midi_port_driver_handle(shoopdaloop_midi_port_t *port);
SHOOP_EXPORT shoopdaloop_midi_port_t *open_driver_midi_port (
    shoop_backend_session_t *backend,
    shoop_audio_driver_t *driver,
    const char* name_hint,
    shoop_port_direction_t direction,
    unsigned has_always_on_ringbuffer
);
SHOOP_EXPORT shoopdaloop_midi_port_t *open_internal_midi_port (
    shoop_backend_session_t *backend,
    const char* name_hint,
    unsigned has_always_on_ringbuffer
);
SHOOP_EXPORT unsigned get_midi_port_input_connectability(shoopdaloop_midi_port_t* port);
SHOOP_EXPORT unsigned get_midi_port_output_connectability(shoopdaloop_midi_port_t* port);
SHOOP_EXPORT void     set_midi_port_ringbuffer_n_samples (shoopdaloop_midi_port_t* port, unsigned n);
// Decoupled midi ports
SHOOP_EXPORT shoopdaloop_decoupled_midi_port_t *open_decoupled_midi_port(shoop_audio_driver_t *driver, const char* name_hint, shoop_port_direction_t direction);
SHOOP_EXPORT shoop_midi_event_t *maybe_next_message(shoopdaloop_decoupled_midi_port_t *port);
SHOOP_EXPORT void send_decoupled_midi(shoopdaloop_decoupled_midi_port_t *port, unsigned length, unsigned char *data);
SHOOP_EXPORT const char* get_decoupled_midi_port_name(shoopdaloop_decoupled_midi_port_t *port);
SHOOP_EXPORT void close_decoupled_midi_port(shoopdaloop_decoupled_midi_port_t *port);
SHOOP_EXPORT shoop_port_connections_state_t *get_decoupled_midi_port_connections_state(shoopdaloop_decoupled_midi_port_t *port);
SHOOP_EXPORT void connect_external_decoupled_midi_port(shoopdaloop_decoupled_midi_port_t *ours, const char* external_port_name);
SHOOP_EXPORT void disconnect_external_decoupled_midi_port(shoopdaloop_decoupled_midi_port_t *ours, const char* external_port_name);
// Helpers for freeing any objects/handles obtained from this API.
// This will always safely destroy, including breaking any made connections to other objects, etc.
SHOOP_EXPORT void destroy_midi_event(shoop_midi_event_t *d);
SHOOP_EXPORT void destroy_midi_sequence(shoop_midi_sequence_t *d);
SHOOP_EXPORT void destroy_audio_channel_data(shoop_audio_channel_data_t *d);
SHOOP_EXPORT void destroy_audio_channel_state_info(shoop_audio_channel_state_info_t *d);
SHOOP_EXPORT void destroy_midi_channel_state_info(shoop_midi_channel_state_info_t *d);
SHOOP_EXPORT void destroy_backend_state_info(shoop_backend_session_state_info_t *d);
SHOOP_EXPORT void destroy_loop(shoopdaloop_loop_t *d);
SHOOP_EXPORT void destroy_audio_port(shoopdaloop_audio_port_t *d);
SHOOP_EXPORT void destroy_midi_port(shoopdaloop_midi_port_t *d);
SHOOP_EXPORT void destroy_midi_port_state_info(shoop_midi_port_state_info_t *d);
SHOOP_EXPORT void destroy_audio_port_state_info(shoop_audio_port_state_info_t *d);
SHOOP_EXPORT void destroy_audio_channel(shoopdaloop_loop_audio_channel_t *d);