src/rust/backend/src/codegen/libshoopdaloop.rs

extern "C" {
    pub fn disconnect_midi_output(
        channel: *mut shoopdaloop_loop_midi_channel_t,
        port: *mut shoopdaloop_midi_port_t,
    );
}
extern "C" {
    pub fn disconnect_audio_inputs(channel: *mut shoopdaloop_loop_audio_channel_t);
}
extern "C" {
    pub fn disconnect_midi_inputs(channel: *mut shoopdaloop_loop_midi_channel_t);
}
extern "C" {
    pub fn disconnect_audio_input(
        channel: *mut shoopdaloop_loop_audio_channel_t,
        port: *mut shoopdaloop_audio_port_t,
    );
}
extern "C" {
    pub fn disconnect_midi_input(
        channel: *mut shoopdaloop_loop_midi_channel_t,
        port: *mut shoopdaloop_midi_port_t,
    );
}
extern "C" {
    pub fn get_audio_channel_data(
        channel: *mut shoopdaloop_loop_audio_channel_t,
    ) -> *mut shoop_audio_channel_data_t;
}
extern "C" {
    pub fn get_midi_channel_data(
        channel: *mut shoopdaloop_loop_midi_channel_t,
    ) -> *mut shoop_midi_sequence_t;
}
extern "C" {
    pub fn load_audio_channel_data(
        channel: *mut shoopdaloop_loop_audio_channel_t,
        data: *mut shoop_audio_channel_data_t,
    );
}
extern "C" {
    pub fn load_midi_channel_data(
        channel: *mut shoopdaloop_loop_midi_channel_t,
        data: *mut shoop_midi_sequence_t,
    );
}
extern "C" {
    pub fn get_audio_channel_state(
        channel: *mut shoopdaloop_loop_audio_channel_t,
    ) -> *mut shoop_audio_channel_state_info_t;
}
extern "C" {
    pub fn set_audio_channel_gain(channel: *mut shoopdaloop_loop_audio_channel_t, gain: f32);
}
extern "C" {
    pub fn get_midi_channel_state(
        channel: *mut shoopdaloop_loop_midi_channel_t,
    ) -> *mut shoop_midi_channel_state_info_t;
}
extern "C" {
    pub fn set_audio_channel_mode(
        channel: *mut shoopdaloop_loop_audio_channel_t,
        mode: shoop_channel_mode_t,
    );
}
extern "C" {
    pub fn set_midi_channel_mode(
        channel: *mut shoopdaloop_loop_midi_channel_t,
        mode: shoop_channel_mode_t,
    );
}
extern "C" {
    pub fn set_audio_channel_start_offset(
        channel: *mut shoopdaloop_loop_audio_channel_t,
        offset: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn set_midi_channel_start_offset(
        channel: *mut shoopdaloop_loop_midi_channel_t,
        offset: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn set_audio_channel_n_preplay_samples(
        channel: *mut shoopdaloop_loop_audio_channel_t,
        n: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn set_midi_channel_n_preplay_samples(
        channel: *mut shoopdaloop_loop_midi_channel_t,
        n: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn clear_audio_channel_data_dirty(channel: *mut shoopdaloop_loop_audio_channel_t);
}
extern "C" {
    pub fn clear_midi_channel_data_dirty(channel: *mut shoopdaloop_loop_midi_channel_t);
}
extern "C" {
    pub fn reset_midi_channel_state_tracking(channel: *mut shoopdaloop_loop_midi_channel_t);
}
extern "C" {
    pub fn create_fx_chain(
        backend: *mut shoop_backend_session_t,
        type_: shoop_fx_chain_type_t,
        title: *const ::std::os::raw::c_char,
    ) -> *mut shoopdaloop_fx_chain_t;
}
extern "C" {
    pub fn fx_chain_set_ui_visible(
        chain: *mut shoopdaloop_fx_chain_t,
        visible: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn get_fx_chain_state(
        chain: *mut shoopdaloop_fx_chain_t,
    ) -> *mut shoop_fx_chain_state_info_t;
}
extern "C" {
    pub fn set_fx_chain_active(chain: *mut shoopdaloop_fx_chain_t, active: ::std::os::raw::c_uint);
}
extern "C" {
    pub fn get_fx_chain_internal_state(
        chain: *mut shoopdaloop_fx_chain_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn restore_fx_chain_internal_state(
        chain: *mut shoopdaloop_fx_chain_t,
        state: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn n_fx_chain_audio_input_ports(
        chain: *mut shoopdaloop_fx_chain_t,
    ) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn n_fx_chain_audio_output_ports(
        chain: *mut shoopdaloop_fx_chain_t,
    ) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn n_fx_chain_midi_input_ports(
        chain: *mut shoopdaloop_fx_chain_t,
    ) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn fx_chain_audio_input_port(
        chain: *mut shoopdaloop_fx_chain_t,
        idx: ::std::os::raw::c_uint,
    ) -> *mut shoopdaloop_audio_port_t;
}
extern "C" {
    pub fn fx_chain_audio_output_port(
        chain: *mut shoopdaloop_fx_chain_t,
        idx: ::std::os::raw::c_uint,
    ) -> *mut shoopdaloop_audio_port_t;
}
extern "C" {
    pub fn fx_chain_midi_input_port(
        chain: *mut shoopdaloop_fx_chain_t,
        idx: ::std::os::raw::c_uint,
    ) -> *mut shoopdaloop_midi_port_t;
}
extern "C" {
    pub fn connect_audio_port_internal(
        from: *mut shoopdaloop_audio_port_t,
        to: *mut shoopdaloop_audio_port_t,
    );
}
extern "C" {
    pub fn connect_audio_port_external(
        ours: *mut shoopdaloop_audio_port_t,
        external_port_name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn disconnect_audio_port_external(
        ours: *mut shoopdaloop_audio_port_t,
        external_port_name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn disconnect_audio_port_internal(
        from: *mut shoopdaloop_audio_port_t,
        to: *mut shoopdaloop_audio_port_t,
    );
}
extern "C" {
    pub fn set_audio_port_gain(port: *mut shoopdaloop_audio_port_t, gain: f32);
}
extern "C" {
    pub fn set_audio_port_muted(port: *mut shoopdaloop_audio_port_t, muted: ::std::os::raw::c_uint);
}
extern "C" {
    pub fn set_audio_port_passthroughMuted(
        port: *mut shoopdaloop_audio_port_t,
        muted: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn get_audio_port_state(
        port: *mut shoopdaloop_audio_port_t,
    ) -> *mut shoop_audio_port_state_info_t;
}
extern "C" {
    pub fn get_audio_port_connections_state(
        port: *mut shoopdaloop_audio_port_t,
    ) -> *mut shoop_port_connections_state_t;
}
extern "C" {
    pub fn get_audio_port_driver_handle(
        port: *mut shoopdaloop_audio_port_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn open_driver_audio_port(
        backend: *mut shoop_backend_session_t,
        driver: *mut shoop_audio_driver_t,
        name_hint: *const ::std::os::raw::c_char,
        direction: shoop_port_direction_t,
        min_always_on_ringbuffer_samples: ::std::os::raw::c_uint,
    ) -> *mut shoopdaloop_audio_port_t;
}
extern "C" {
    pub fn open_internal_audio_port(
        backend: *mut shoop_backend_session_t,
        name_hint: *const ::std::os::raw::c_char,
        min_always_on_ringbuffer_samples: ::std::os::raw::c_uint,
    ) -> *mut shoopdaloop_audio_port_t;
}
extern "C" {
    pub fn get_audio_port_input_connectability(
        port: *mut shoopdaloop_audio_port_t,
    ) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn get_audio_port_output_connectability(
        port: *mut shoopdaloop_audio_port_t,
    ) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn set_audio_port_ringbuffer_n_samples(
        port: *mut shoopdaloop_audio_port_t,
        n: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn connect_midi_port_internal(
        from: *mut shoopdaloop_midi_port_t,
        to: *mut shoopdaloop_midi_port_t,
    );
}
extern "C" {
    pub fn connect_midi_port_external(
        ours: *mut shoopdaloop_midi_port_t,
        external_port_name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn disconnect_midi_port_external(
        ours: *mut shoopdaloop_midi_port_t,
        external_port_name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn disconnect_midi_port_internal(
        ours: *mut shoopdaloop_midi_port_t,
        to: *mut shoopdaloop_midi_port_t,
    );
}
extern "C" {
    pub fn get_midi_port_state(
        port: *mut shoopdaloop_midi_port_t,
    ) -> *mut shoop_midi_port_state_info_t;
}
extern "C" {
    pub fn set_midi_port_muted(port: *mut shoopdaloop_midi_port_t, muted: ::std::os::raw::c_uint);
}
extern "C" {
    pub fn set_midi_port_passthroughMuted(
        port: *mut shoopdaloop_midi_port_t,
        muted: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn get_midi_port_connections_state(
        port: *mut shoopdaloop_midi_port_t,
    ) -> *mut shoop_port_connections_state_t;
}
extern "C" {
    pub fn get_midi_port_driver_handle(
        port: *mut shoopdaloop_midi_port_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn open_driver_midi_port(
        backend: *mut shoop_backend_session_t,
        driver: *mut shoop_audio_driver_t,
        name_hint: *const ::std::os::raw::c_char,
        direction: shoop_port_direction_t,
        min_always_on_ringbuffer_samples: ::std::os::raw::c_uint,
    ) -> *mut shoopdaloop_midi_port_t;
}
extern "C" {
    pub fn open_internal_midi_port(
        backend: *mut shoop_backend_session_t,
        name_hint: *const ::std::os::raw::c_char,
        min_always_on_ringbuffer_samples: ::std::os::raw::c_uint,
    ) -> *mut shoopdaloop_midi_port_t;
}
extern "C" {
    pub fn get_midi_port_input_connectability(
        port: *mut shoopdaloop_midi_port_t,
    ) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn get_midi_port_output_connectability(
        port: *mut shoopdaloop_midi_port_t,
    ) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn set_midi_port_ringbuffer_n_samples(
        port: *mut shoopdaloop_midi_port_t,
        n: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn open_decoupled_midi_port(
        driver: *mut shoop_audio_driver_t,
        name_hint: *const ::std::os::raw::c_char,
        direction: shoop_port_direction_t,
    ) -> *mut shoopdaloop_decoupled_midi_port_t;
}
extern "C" {
    pub fn maybe_next_message(
        port: *mut shoopdaloop_decoupled_midi_port_t,
    ) -> *mut shoop_midi_event_t;
}
extern "C" {
    pub fn send_decoupled_midi(
        port: *mut shoopdaloop_decoupled_midi_port_t,
        length: ::std::os::raw::c_uint,
        data: *mut ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn get_decoupled_midi_port_name(
        port: *mut shoopdaloop_decoupled_midi_port_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn close_decoupled_midi_port(port: *mut shoopdaloop_decoupled_midi_port_t);
}
extern "C" {
    pub fn get_decoupled_midi_port_connections_state(
        port: *mut shoopdaloop_decoupled_midi_port_t,
    ) -> *mut shoop_port_connections_state_t;
}
extern "C" {
    pub fn connect_external_decoupled_midi_port(
        ours: *mut shoopdaloop_decoupled_midi_port_t,
        external_port_name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn disconnect_external_decoupled_midi_port(
        ours: *mut shoopdaloop_decoupled_midi_port_t,
        external_port_name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn destroy_midi_event(d: *mut shoop_midi_event_t);
}
extern "C" {
    pub fn destroy_midi_sequence(d: *mut shoop_midi_sequence_t);
}
extern "C" {
    pub fn destroy_audio_channel_data(d: *mut shoop_audio_channel_data_t);
}
extern "C" {
    pub fn destroy_audio_channel_state_info(d: *mut shoop_audio_channel_state_info_t);
}
extern "C" {
    pub fn destroy_midi_channel_state_info(d: *mut shoop_midi_channel_state_info_t);
}
extern "C" {
    pub fn destroy_backend_state_info(d: *mut shoop_backend_session_state_info_t);
}
extern "C" {
    pub fn destroy_loop(d: *mut shoopdaloop_loop_t);
}
extern "C" {
    pub fn destroy_audio_port(d: *mut shoopdaloop_audio_port_t);
}
extern "C" {
    pub fn destroy_midi_port(d: *mut shoopdaloop_midi_port_t);
}
extern "C" {
    pub fn destroy_midi_port_state_info(d: *mut shoop_midi_port_state_info_t);
}
extern "C" {
    pub fn destroy_audio_port_state_info(d: *mut shoop_audio_port_state_info_t);
}
extern "C" {
    pub fn destroy_audio_channel(d: *mut shoopdaloop_loop_audio_channel_t);
}
